share more code between grep and head

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,8 @@ configure_file(
 
 add_executable(csv-ls ls.c)
 add_executable(csv-format format.c)
-add_executable(csv-grep grep.c parse.c)
-add_executable(csv-head head.c parse.c)
+add_executable(csv-grep grep.c parse.c utils.c)
+add_executable(csv-head head.c parse.c utils.c)
 
 install(FILES ${CMAKE_BINARY_DIR}/csv-ls
 	DESTINATION ${CMAKE_INSTALL_BINDIR}/)
