implement csv-sum

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_executable(csv-grep grep.c parse.c utils.c)
 add_executable(csv-head head.c parse.c utils.c)
 add_executable(csv-ls ls.c)
 add_executable(csv-rows rows.c parse.c)
+add_executable(csv-sum sum.c parse.c)
 add_executable(csv-tail tail.c parse.c utils.c)
 
 install(FILES
@@ -42,5 +43,6 @@ install(FILES
 		${CMAKE_BINARY_DIR}/csv-head
 		${CMAKE_BINARY_DIR}/csv-ls
 		${CMAKE_BINARY_DIR}/csv-rows
+		${CMAKE_BINARY_DIR}/csv-sum
 		${CMAKE_BINARY_DIR}/csv-tail
 	DESTINATION ${CMAKE_INSTALL_BINDIR}/)
