implement csv-split

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,9 +30,10 @@ add_executable(csv-columns columns.c parse.c)
 add_executable(csv-cut cut.c parse.c)
 add_executable(csv-grep grep.c parse.c utils.c)
 add_executable(csv-head head.c parse.c utils.c)
-add_executable(csv-ls ls.c)
+add_executable(csv-ls ls.c utils.c)
 add_executable(csv-rows rows.c parse.c)
 add_executable(csv-sort sort.c parse.c utils.c)
+add_executable(csv-split split.c parse.c utils.c)
 add_executable(csv-sum sum.c parse.c utils.c)
 add_executable(csv-tail tail.c parse.c utils.c)
 
