clean up directory structure, part 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,20 +23,20 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
 
 configure_file(
-	"${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
+	"${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
 	"${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
 	IMMEDIATE @ONLY)
 
-add_executable(csv-columns columns.c parse.c)
-add_executable(csv-cut cut.c parse.c)
-add_executable(csv-grep grep.c parse.c utils.c)
-add_executable(csv-head head.c parse.c utils.c)
-add_executable(csv-ls ls.c utils.c)
-add_executable(csv-rows rows.c parse.c)
-add_executable(csv-sort sort.c parse.c utils.c)
-add_executable(csv-split split.c parse.c utils.c)
-add_executable(csv-sum sum.c parse.c utils.c)
-add_executable(csv-tail tail.c parse.c utils.c)
+add_executable(csv-columns src/columns.c src/parse.c)
+add_executable(csv-cut src/cut.c src/parse.c)
+add_executable(csv-grep src/grep.c src/parse.c src/utils.c)
+add_executable(csv-head src/head.c src/parse.c src/utils.c)
+add_executable(csv-ls src/ls.c src/utils.c)
+add_executable(csv-rows src/rows.c src/parse.c)
+add_executable(csv-sort src/sort.c src/parse.c src/utils.c)
+add_executable(csv-split src/split.c src/parse.c src/utils.c)
+add_executable(csv-sum src/sum.c src/parse.c src/utils.c)
+add_executable(csv-tail src/tail.c src/parse.c src/utils.c)
 
 install(FILES
 		${CMAKE_BINARY_DIR}/csv-columns
