implement csv-cat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ configure_file(
 	"${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
 	IMMEDIATE @ONLY)
 
+add_executable(csv-cat src/cat.c src/parse.c src/utils.c)
 add_executable(csv-columns src/columns.c src/parse.c)
 add_executable(csv-concat src/concat.c src/parse.c src/utils.c)
 add_executable(csv-cut src/cut.c src/parse.c src/utils.c)
@@ -43,6 +44,7 @@ add_executable(csv-sum src/sum.c src/parse.c src/utils.c)
 add_executable(csv-tail src/tail.c src/parse.c src/utils.c)
 
 install(FILES
+		${CMAKE_BINARY_DIR}/csv-cat
 		${CMAKE_BINARY_DIR}/csv-columns
 		${CMAKE_BINARY_DIR}/csv-concat
 		${CMAKE_BINARY_DIR}/csv-cut
