implement csv-tac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ add_executable(csv-sort src/sort.c src/parse.c src/utils.c)
 add_executable(csv-split src/split.c src/parse.c src/utils.c)
 add_executable(csv-substring src/substring.c src/parse.c src/utils.c)
 add_executable(csv-sum src/sum.c src/parse.c src/utils.c)
+add_executable(csv-tac src/tac.c src/parse.c src/utils.c)
 add_executable(csv-tail src/tail.c src/parse.c src/utils.c)
 
 install(FILES
@@ -58,5 +59,6 @@ install(FILES
 		${CMAKE_BINARY_DIR}/csv-split
 		${CMAKE_BINARY_DIR}/csv-substring
 		${CMAKE_BINARY_DIR}/csv-sum
+		${CMAKE_BINARY_DIR}/csv-tac
 		${CMAKE_BINARY_DIR}/csv-tail
 	DESTINATION ${CMAKE_INSTALL_BINDIR}/)
