--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ add_executable(csv-cat src/cat.c src/parse.c src/utils.c)
 add_executable(csv-columns src/columns.c src/parse.c)
 add_executable(csv-concat src/concat.c src/parse.c src/utils.c)
 add_executable(csv-cut src/cut.c src/parse.c src/utils.c)
+add_executable(csv-filter src/filter.c src/parse.c src/rpn_eval.c src/rpn_parse.c src/utils.c)
 add_executable(csv-grep src/grep.c src/parse.c src/utils.c)
 add_executable(csv-head src/head.c src/parse.c src/utils.c)
 add_executable(csv-ls src/ls.c src/utils.c)
@@ -49,6 +50,7 @@ install(FILES
 		${CMAKE_BINARY_DIR}/csv-columns
 		${CMAKE_BINARY_DIR}/csv-concat
 		${CMAKE_BINARY_DIR}/csv-cut
+		${CMAKE_BINARY_DIR}/csv-filter
 		${CMAKE_BINARY_DIR}/csv-grep
 		${CMAKE_BINARY_DIR}/csv-head
 		${CMAKE_BINARY_DIR}/csv-ls
