Add -s option to all tools.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,53 +37,41 @@ configure_file(
 	"${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
 	IMMEDIATE @ONLY)
 
-add_executable(csv-cat src/cat.c src/parse.c src/utils.c)
-add_executable(csv-columns src/columns.c src/parse.c)
-add_executable(csv-concat src/concat.c src/parse.c src/utils.c)
-add_executable(csv-cut src/cut.c src/parse.c src/utils.c)
-add_executable(csv-grep src/grep.c src/parse.c src/utils.c)
-add_executable(csv-head src/head.c src/parse.c src/utils.c)
-add_executable(csv-ls src/ls.c src/utils.c)
-add_executable(csv-rows src/rows.c src/parse.c)
-add_executable(csv-rpn-add src/rpn-add.c src/parse.c src/rpn_eval.c src/rpn_parse.c src/utils.c)
-add_executable(csv-rpn-filter src/rpn-filter.c src/parse.c src/rpn_eval.c src/rpn_parse.c src/utils.c)
-add_executable(csv-show src/show.c src/parse.c src/utils.c)
-add_executable(csv-sort src/sort.c src/parse.c src/utils.c)
-add_executable(csv-split src/split.c src/parse.c src/utils.c)
-add_executable(csv-substring src/substring.c src/parse.c src/utils.c)
-add_executable(csv-sum src/sum.c src/parse.c src/utils.c)
-add_executable(csv-tac src/tac.c src/parse.c src/utils.c)
-add_executable(csv-tail src/tail.c src/parse.c src/utils.c)
+add_library(csvshared STATIC src/parse.c src/utils.c)
+add_library(csvrpn STATIC src/rpn_eval.c src/rpn_parse.c)
+
+function(build_tool name)
+	add_executable(${name} ${ARGN})
+	target_link_libraries(${name} csvshared)
+	install(FILES ${CMAKE_BINARY_DIR}/${name}
+		DESTINATION ${CMAKE_INSTALL_BINDIR}/)
+endfunction()
+
+build_tool(csv-cat		src/cat.c)
+build_tool(csv-columns		src/columns.c)
+build_tool(csv-concat		src/concat.c)
+build_tool(csv-cut		src/cut.c)
+build_tool(csv-grep		src/grep.c)
+build_tool(csv-head		src/head.c)
+build_tool(csv-ls		src/ls.c)
+build_tool(csv-rows		src/rows.c)
+build_tool(csv-rpn-add		src/rpn-add.c)
+build_tool(csv-rpn-filter	src/rpn-filter.c)
+build_tool(csv-show		src/show.c)
+build_tool(csv-sort		src/sort.c)
+build_tool(csv-split		src/split.c)
+build_tool(csv-substring	src/substring.c)
+build_tool(csv-sum		src/sum.c)
+build_tool(csv-tac		src/tac.c)
+build_tool(csv-tail		src/tail.c)
+
+target_link_libraries(csv-rpn-add	csvrpn)
+target_link_libraries(csv-rpn-filter	csvrpn)
 
 if(SQLITE3_FOUND)
-	add_executable(csv-sqlite src/sqlite.c src/parse.c src/utils.c)
+	build_tool(csv-sqlite src/sqlite.c)
 	if (SQLITE3_INCLUDE_DIRS)
 		target_include_directories(csv-sqlite ${SQLITE3_INCLUDE_DIRS})
 	endif()
 	target_link_libraries(csv-sqlite ${SQLITE3_LIBRARIES})
-endif()
-
-install(FILES
-		${CMAKE_BINARY_DIR}/csv-cat
-		${CMAKE_BINARY_DIR}/csv-columns
-		${CMAKE_BINARY_DIR}/csv-concat
-		${CMAKE_BINARY_DIR}/csv-cut
-		${CMAKE_BINARY_DIR}/csv-grep
-		${CMAKE_BINARY_DIR}/csv-head
-		${CMAKE_BINARY_DIR}/csv-ls
-		${CMAKE_BINARY_DIR}/csv-rows
-		${CMAKE_BINARY_DIR}/csv-rpn-add
-		${CMAKE_BINARY_DIR}/csv-rpn-filter
-		${CMAKE_BINARY_DIR}/csv-show
-		${CMAKE_BINARY_DIR}/csv-sort
-		${CMAKE_BINARY_DIR}/csv-split
-		${CMAKE_BINARY_DIR}/csv-substring
-		${CMAKE_BINARY_DIR}/csv-sum
-		${CMAKE_BINARY_DIR}/csv-tac
-		${CMAKE_BINARY_DIR}/csv-tail
-	DESTINATION ${CMAKE_INSTALL_BINDIR}/)
-
-if(SQLITE3_FOUND)
-	install(FILES ${CMAKE_BINARY_DIR}/csv-sqlite
-		DESTINATION ${CMAKE_INSTALL_BINDIR}/)
 endif()
