implement csv-exec-add

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ build_tool(csv-columns		src/columns.c)
 build_tool(csv-concat		src/concat.c)
 build_tool(csv-cut		src/cut.c)
 build_tool(csv-exec		src/exec.c)
+build_tool(csv-exec-add		src/exec-add.c)
 build_tool(csv-grep		src/grep.c)
 build_tool(csv-head		src/head.c)
 build_tool(csv-ls		src/ls.c)
