replace csv-rows & csv-columns with csv-count

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,15 +48,14 @@ function(build_tool name)
 endfunction()
 
 build_tool(csv-cat		src/cat.c)
-build_tool(csv-columns		src/columns.c)
 build_tool(csv-concat		src/concat.c)
+build_tool(csv-count		src/count.c)
 build_tool(csv-cut		src/cut.c)
 build_tool(csv-exec		src/exec.c)
 build_tool(csv-exec-add		src/exec-add.c)
 build_tool(csv-grep		src/grep.c)
 build_tool(csv-head		src/head.c)
 build_tool(csv-ls		src/ls.c)
-build_tool(csv-rows		src/rows.c)
 build_tool(csv-rpn-add		src/rpn-add.c)
 build_tool(csv-rpn-filter	src/rpn-filter.c)
 build_tool(csv-show		src/show.c)
