implement csv-users and csv-groups

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ build_tool(csv-cut		src/cut.c)
 build_tool(csv-exec		src/exec.c)
 build_tool(csv-exec-add		src/exec-add.c)
 build_tool(csv-grep		src/grep.c)
+build_tool(csv-groups		src/groups.c src/usr-grp.c)
 build_tool(csv-head		src/head.c)
 build_tool(csv-ls		src/ls.c)
 build_tool(csv-rpn-add		src/rpn-add.c)
@@ -65,6 +66,7 @@ build_tool(csv-substring	src/substring.c)
 build_tool(csv-sum		src/sum.c)
 build_tool(csv-tac		src/tac.c)
 build_tool(csv-tail		src/tail.c)
+build_tool(csv-users		src/users.c src/usr-grp.c)
 
 target_link_libraries(csv-rpn-add	csvrpn)
 target_link_libraries(csv-rpn-filter	csvrpn)
